# little-secret

./: README.md  index.html  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: cry_info.rs  encrypt.rs  folder.rs  mod.rs  thumbnail.rs
src/assets/: index.css
src/comp/: Layout.tsx
src/pages/: IndexPage.tsx
src/pages/browse/: BrowsePage.tsx
src/pages/encrypt/: EncryptPage.tsx
