[package]
name = "little-secret"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "little_secret_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
rand = "0.8"
chacha20 = "0.9"                 # chaCha20 stream cipher
cipher = "0.4"          # 用这个替代旧的 stream-cipher
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
byteorder = "1.4"
anyhow = "1.0"
subtle = "2.6.1"                   # 简化错误处理
rayon = "1.11.0"
image = "0.25.8"
